# maf-ollama-api-orchestration-scenarios

./: .gitignore  CODEX_HANDOFF.md  LEARNING_PATH.md  README.md  SCENARIO_17_A2A_PLAN.md  SCENARIO_CODE_REVIEW.md  SCENARIO_POLISH_PLAN.md  SCENARIO_RATINGS.md
invocations-api-scenarios/: README.md  pyproject.toml  requirements.txt
invocations-api-scenarios/notebooks/: 01-sequential-release-readiness.ipynb  02-concurrent-pr-review.ipynb  03-handoff-support-triage.ipynb  04-group-chat-launch-council.ipynb  05-magentic-incident-response.ipynb  06-sequential-employee-onboarding.ipynb  07-concurrent-vendor-risk-assessment.ipynb  08-handoff-customer-entitlement.ipynb  09-group-chat-quarterly-planning.ipynb  10-magentic-supply-chain-disruption.ipynb  11-sequential-procurement-approval.ipynb  12-concurrent-security-alert-enrichment.ipynb  13-handoff-claims-exception-routing.ipynb  14-group-chat-policy-exception-board.ipynb  15-magentic-business-continuity-drill.ipynb  16a-scenario-16-quote-to-cash-sequential.ipynb  16b-scenario-16-quote-to-cash-concurrent.ipynb  16c-scenario-16-quote-to-cash-handoff.ipynb  16d-scenario-16-quote-to-cash-group-chat.ipynb  16e-scenario-16-quote-to-cash-magentic.ipynb  17-group-chat-partner-launch-review.ipynb  18-agent-framework-primitives-lab.ipynb  19-sequential-loan-origination.ipynb  20-concurrent-ma-due-diligence.ipynb  21-handoff-transaction-dispute.ipynb  22-group-chat-architecture-review.ipynb  23-magentic-churn-spike-investigation.ipynb
responses-api-scenarios/: .env.example  README.md  pyproject.toml  requirements.txt
(+366 files in other folders)
