[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "maf-invocations-api-scenarios"
version = "0.1.0"
description = "Microsoft Agent Framework Invocations API multi-agent sample using Ollama."
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]
